# anticorruption-bot

./: .gitignore  README.md  bot.py  pyproject.toml  requirements.txt
base/: dataset.txt
