[tool.poetry]
name = "anticorruption-bot"
version = "0.1.0"
description = ""
authors = ["ancalita <27920906+ancalita@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "anticorruption_bot"}]

[tool.poetry.dependencies]
python = ">=3.7, <=3.8"
flask = "^2.2.3"
chatterbot = "^1.0.8"
twilio = "^7.16.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
